preventing selection of lunch image on mobile devices

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -703,6 +703,7 @@ html[lang="ja-simple"] {
 }
 .lunch--image {
   width: 100%;
+  user-select: none;
 }
 .lunch-item--marker {
   position: absolute;
